--- a/RLML_Lab_10.ipynb
+++ b/RLML_Lab_10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgx4aJL3o03v9a0EPHNrNF",
+      "authorship_tag": "ABX9TyN3d/8B4TPuqwaLSdKgJh5C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,28 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/NithinReddychallagonda/RLML-AIML/blob/main/RLML_Lab_10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#2303A51550\n",
+        "\n",
+        "Ch. Nithin Reddy\n",
+        "\n",
+        "Batch:- 08"
+      ],
+      "metadata": {
+        "id": "XrEvZB-BcItO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exploring Multi-Agent Reinforcement Learning environments and MARL algorithms.\n"
+      ],
+      "metadata": {
+        "id": "2tZi0hg7cSbD"
+      }
     },
     {
       "cell_type": "code",
